force-app/main/default/objects/Exclusive_Service_History__c/Exclusive_Service_History__c.object-meta.xml
<CustomObject>
    <label>Exclusive Service History</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Exclusive Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusive Service History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>