force-app/main/default/objects/Exclusive_Service_History__c/fields/Age_of_Child_Infant_Car_Safety_Seat__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Child_Infant_Car_Safety_Seat__c</fullName>
    <label>Car Safety Seat</label>
    <type>TextArea</type>
</CustomField>