force-app/main/default/objects/Exclusive_Service_History__c/fields/Baggage_21_to_25_inch__c.field-meta.xml
<CustomField>
    <fullName>Baggage_21_to_25_inch__c</fullName>
    <label>Baggage (21 to 25  inch.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>