force-app/main/default/objects/Exclusive_Service_History__c/fields/Baggage_26_to_28_inch__c.field-meta.xml
<CustomField>
    <fullName>Baggage_26_to_28_inch__c</fullName>
    <label>Baggage (26 to 28  inch.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>