force-app/main/default/objects/Exclusive_Service_History__c/fields/Baggage_Below_20_inch__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Below_20_inch__c</fullName>
    <label>Baggage (Below 20 inch.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>