force-app/main/default/objects/Exclusive_Service_History__c/fields/Canlead_Hertz_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Canlead_Hertz_Order_No__c</fullName>
    <label>Canlead / Hertz Order No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>