force-app/main/default/objects/Exclusive_Service_History__c/fields/Car_Model_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>Car_Model_HYLG_Only__c</fullName>
    <label>Car Model (HYLG Only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>