force-app/main/default/objects/Exclusive_Service_History__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Chauffeur_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPE - Luxury Car</fullName>
            </value>
            <value>
                <fullName>TPE - Business Luxury Car</fullName>
            </value>
            <value>
                <fullName>SFO - Mercedes Benz S Class</fullName>
            </value>
            <value>
                <fullName>SFO - Cadillac Escalade</fullName>
            </value>
            <value>
                <fullName>SIN - Mercedes Benz S Class</fullName>
            </value>
            <value>
                <fullName>SIN - Mercedes Benz E Class</fullName>
            </value>
            <value>
                <fullName>SIN - Vellfire / Alphard</fullName>
            </value>
            <value>
                <fullName>BKK - Top Luxury Sedan</fullName>
            </value>
            <value>
                <fullName>BKK - Top Luxury Van</fullName>
            </value>
            <value>
                <fullName>ONT - Luxury Sedan</fullName>
            </value>
            <value>
                <fullName>ONT - Luxury SUV</fullName>
            </value>
            <value>
                <fullName>PHX - Luxury Sedan​</fullName>
            </value>
            <value>
                <fullName>PHX - Luxury SUV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>