force-app/main/default/objects/Exclusive_Service_History__c/fields/Chauffeur_Type__c.field-meta.xml
<CustomField>
    <fullName>Chauffeur_Type__c</fullName>
    <label>Chauffeur Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCAR</fullName>
            </value>
            <value>
                <fullName>LIMO</fullName>
            </value>
            <value>
                <fullName>SGCR</fullName>
            </value>
            <value>
                <fullName>THCR</fullName>
            </value>
            <value>
                <fullName>ONMO</fullName>
            </value>
            <value>
                <fullName>PXMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>