force-app/main/default/objects/Exclusive_Service_History__c/fields/Chinese_Name_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Name_HYLG_Only__c</fullName>
    <label>Chinese Name (HYLG Only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>