force-app/main/default/objects/Exclusive_Service_History__c/fields/Driver_Info__c.field-meta.xml
<CustomField>
    <fullName>Driver_Info__c</fullName>
    <description>Driver&apos;s Name:
Car Registration No.:</description>
    <label>Driver Info</label>
    <type>TextArea</type>
</CustomField>