force-app/main/default/objects/Exclusive_Service_History__c/fields/Driver_s_Birthday_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Birthday_HYLG_Only__c</fullName>
    <label>Driver&apos;s Birthday (HYLG Only)</label>
    <type>Date</type>
</CustomField>