force-app/main/default/objects/Exclusive_Service_History__c/fields/Driver_s_ID_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_ID_HYLG_Only__c</fullName>
    <label>Driver&apos;s ID (HYLG Only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>