force-app/main/default/objects/Exclusive_Service_History__c/fields/Driver_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Phone__c</fullName>
    <label>Driver&apos;s Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>