force-app/main/default/objects/Exclusive_Service_History__c/fields/Duty_free_pickup_HYLG_only__c.field-meta.xml
<CustomField>
    <fullName>Duty_free_pickup_HYLG_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duty-free pickup (HYLG only)</label>
    <type>Checkbox</type>
</CustomField>