force-app/main/default/objects/Exclusive_Service_History__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <type>TextArea</type>
</CustomField>