force-app/main/default/objects/Exclusive_Service_History__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <type>TextArea</type>
</CustomField>