force-app/main/default/objects/Exclusive_Service_History__c/fields/Language_Preference_LAPS_Only__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference_LAPS_Only__c</fullName>
    <label>Language Preference (LAPS Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>