force-app/main/default/objects/Exclusive_Service_History__c/fields/Nationality_Region__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Region__c</fullName>
    <label>Nationality/Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>