force-app/main/default/objects/Exclusive_Service_History__c/fields/Number_of_Child_Infant_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Child_Infant_Passenger__c</fullName>
    <label>Number of Child / Infant Passenger</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>