force-app/main/default/objects/Exclusive_Service_History__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No.</label>
    <type>TextArea</type>
</CustomField>