force-app/main/default/objects/Exclusive_Service_History__c/fields/Original_Case_No__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Case No.</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Exclusive Service History (Original Case No.)</relationshipLabel>
    <relationshipName>Exclusive_Service_History1</relationshipName>
    <type>Lookup</type>
</CustomField>