force-app/main/default/objects/Exclusive_Service_History__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <type>TextArea</type>
</CustomField>