force-app/main/default/objects/Exclusive_Service_History__c/fields/Passenger_Title__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Title__c</fullName>
    <label>Passenger Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>