force-app/main/default/objects/Exclusive_Service_History__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>