force-app/main/default/objects/Exclusive_Service_History__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <type>TextArea</type>
</CustomField>