force-app/main/default/objects/Exclusive_Service_History__c/fields/Private_Terminal_Type__c.field-meta.xml
<CustomField>
    <fullName>Private_Terminal_Type__c</fullName>
    <label>Private Terminal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAPS</fullName>
            </value>
            <value>
                <fullName>HYLG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>