force-app/main/default/objects/Exclusive_Service_History__c/fields/Require_tax_refund_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>Require_tax_refund_HYLG_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require tax refund (HYLG Only)</label>
    <type>Checkbox</type>
</CustomField>