force-app/main/default/objects/Exclusive_Service_History__c/fields/TCP_s_Chinese_Name_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>TCP_s_Chinese_Name_HYLG_Only__c</fullName>
    <label>TCP&apos;s Chinese Name (HYLG Only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>