force-app/main/default/objects/Exclusive_Service_History__c/fields/TCP_s_Passport_Expiry_Date_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>TCP_s_Passport_Expiry_Date_HYLG_Only__c</fullName>
    <label>TCP&apos;s Passport Expiry Date(HYLG Only)</label>
    <type>Date</type>
</CustomField>