force-app/main/default/objects/Exclusive_Service_History__c/fields/TCP_s_Passport_No_HYLG_Only__c.field-meta.xml
<CustomField>
    <fullName>TCP_s_Passport_No_HYLG_Only__c</fullName>
    <label>TCP&apos;s Passport No. (HYLG Only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>