force-app/main/default/objects/Exclusive_Service_History__c/fields/TCP_s_PNR__c.field-meta.xml
<CustomField>
    <fullName>TCP_s_PNR__c</fullName>
    <label>TCP&apos;s PNR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>