force-app/main/default/objects/Exclusive_Service_History__c/fields/TCP_s_Title__c.field-meta.xml
<CustomField>
    <fullName>TCP_s_Title__c</fullName>
    <label>TCP&apos;s Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>