force-app/main/default/objects/Exclusive_Service_History__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <label>Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Private_Terminal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use_STARLUX_provided_chauffeur_service</fullName>
                <label>Use STARLUX-provided chauffeur service</label>
            </value>
            <value>
                <fullName>Pick_up_drop_off_by_friend_or_family_drivers_information_required</fullName>
                <label>Pick-up/drop-off by friend or family (driver’s information required)</label>
            </value>
            <value>
                <fullName>Pick_up_drop_off_by_friend_or_family_drivers_ID_required</fullName>
                <label>Pick-up/drop-off by friend or family (driver’s ID required)</label>
            </value>
            <value>
                <fullName>Chauffeur_service_self_arranged</fullName>
                <label>Chauffeur service (self-arranged)</label>
            </value>
            <value>
                <fullName>Use_Hertz_rental_car_self_arranged</fullName>
                <label>Use Hertz rental car (self-arranged)</label>
            </value>
            <value>
                <fullName>Use_Uber_self_arranged</fullName>
                <label>Use Uber (self-arranged)</label>
            </value>
            <value>
                <fullName>Use_Lyft_self_arranged</fullName>
                <label>Use Lyft (self-arranged)</label>
            </value>
            <value>
                <fullName>Use_taxi_self_arranged</fullName>
                <label>Use taxi (self-arranged)</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>