force-app/main/default/objects/Exclusive_Service_History__c/fields/Web_Phone__c.field-meta.xml
<CustomField>
    <fullName>Web_Phone__c</fullName>
    <label>Web Phone</label>
    <type>TextArea</type>
</CustomField>