force-app/main/default/objects/Exclusive_Service_History__c/fields/X1A_Special_Keyword__c.field-meta.xml
<CustomField>
    <fullName>X1A_Special_Keyword__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1A Special Keyword</label>
    <type>Checkbox</type>
</CustomField>