force-app/main/default/objects/Exclusive_Service_History__c/recordTypes/Chauffeur_Service.recordType-meta.xml
<RecordType>
    <fullName>Chauffeur_Service</fullName>
    <active>true</active>
    <label>Chauffeur Service</label>
</RecordType>