force-app/main/default/objects/Exclusive_Service_History__c/recordTypes/Private_Terminal_Service.recordType-meta.xml
<RecordType>
    <fullName>Private_Terminal_Service</fullName>
    <active>true</active>
    <label>Private Terminal Service</label>
</RecordType>