force-app/main/default/objects/Exclusive_Service_History__c/validationRules/Cancel_Order_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Order_Mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Chauffeur Service&quot;,
  ISPICKVAL( Order_Status__c , &quot;Cancel&quot;),
  OR(
    ISBLANK( TEXT( Chauffeur_Type__c ) ),
    ISBLANK( TEXT( Service_Type__c ) ),
    ISBLANK( Order_No__c ),
    ISBLANK( Cancel_Reason__c )
  )
)</errorConditionFormula>
    <errorMessage>&quot;Chauffeur Type&quot;, &quot;Service Type&quot;, &quot;Order No.&quot; and &quot;Cancel Reason&quot; can not be empty.</errorMessage>
</ValidationRule>