force-app/main/default/objects/Exclusive_Service_History__c/validationRules/HYLG_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>HYLG_Mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Private Terminal Service&quot;,
  ISPICKVAL( Private_Terminal_Type__c , &quot;HYLG&quot;),
  OR(
    ISBLANK(Nationality_Region__c),
    ISBLANK(Passport_No__c),
    ISBLANK(Passport_Expiry_Date__c),
    ISBLANK(Birthday__c)
  )
)</errorConditionFormula>
    <errorMessage>When Private Terminal Type = HYLG, the following fields can&apos;t be empty: 
&quot;Nationality/Region&quot;, &quot;Passport No.&quot;, &quot;Passport Expiry Date&quot;, &quot;Birthday&quot;.</errorMessage>
</ValidationRule>