force-app/main/default/objects/Exclusive_Service_History__c/validationRules/New_Order_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Order_Mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Chauffeur Service&quot;,
  ISPICKVAL(Order_Status__c, &quot;New Order&quot;),
  OR(
    ISBLANK(TEXT(Chauffeur_Type__c)),
    ISBLANK(TEXT(Service_Type__c))
  )
)</errorConditionFormula>
    <errorMessage>&quot;Chauffeur Type&quot; and&quot; Service Type&quot; can not be empty.</errorMessage>
</ValidationRule>