force-app/main/default/objects/Exclusive_Service_History__c/validationRules/Order_Change_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Change_Mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Chauffeur Service&quot;,
  ISPICKVAL(Order_Status__c, &quot;Order Change&quot;),
  OR(
    ISBLANK(TEXT(Chauffeur_Type__c)),
    ISBLANK(TEXT(Service_Type__c))
  )
)</errorConditionFormula>
    <errorMessage>&quot;Chauffeur Type&quot;, &quot;Service Type&quot; can not be empty.</errorMessage>
</ValidationRule>