force-app/main/default/objects/Exclusive_Service_History__c/validationRules/Transportation_equal_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>Transportation_equal_Others</fullName>
    <active>true</active>
    <description>當Transportation =其他，Remark為必填</description>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Private Terminal Service&quot;,
  ISPICKVAL(Transportation__c , &quot;Other&quot;),
  ISBLANK(Remarks__c)
  )</errorConditionFormula>
    <errorMessage>When the Transportation = Others, the 【Remark】can&apos;t be empty.</errorMessage>
</ValidationRule>