force-app/main/default/objects/Exclusive_Service_History__c/validationRules/Transportation_equal_STARLUX_chauffeur.validationRule-meta.xml
<ValidationRule>
    <fullName>Transportation_equal_STARLUX_chauffeur</fullName>
    <active>true</active>
    <description>當Transportation = Use STARLUX-provided chauffeur service (使用星宇航空提供之接送機服務)，【Canlead / Hertz Order No.】為必填</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Private Terminal Service&quot;,
    ISPICKVAL(Transportation__c, &quot;Use STARLUX-provided chauffeur service&quot;),
    ISBLANK(Canlead_Hertz_Order_No__c)
)</errorConditionFormula>
    <errorMessage>When the Transportation = Use STARLUX-provided chauffeur service, the【Canlead / Hertz Order No.】can&apos;t be empty.</errorMessage>
</ValidationRule>