force-app/main/default/objects/Exclusive_Service_History__c/validationRules/X1A_Special_Keyword.validationRule-meta.xml
<ValidationRule>
    <fullName>X1A_Special_Keyword</fullName>
    <active>true</active>
    <description>The record can&apos;t be modify if &quot;1A Special Keyword&quot; checkbox is ticked.</description>
    <errorConditionFormula>AND(
PRIORVALUE(X1A_Special_Keyword__c)= true,
X1A_Special_Keyword__c = true)</errorConditionFormula>
    <errorMessage>This record can&apos;t be modify due to &quot;1A Special Keyword&quot; is ticked.</errorMessage>
</ValidationRule>